Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-2394

Possible NULL pointer dereference in cat_cancel_cb

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Critical Critical
    • Lustre 2.4.0
    • Lustre 2.4.0
    • 3
    • 5672

      If llog_cat_id2handle fails and returns a positive value, it may free
      its 'res' parameter and set it to NULL. Thus, a caller must be cautious
      not to cause a NULL pointer dereference on error.

      Specifically, the cat_cancel_cb function does not take this precaution, which can manifest itself in a NULL pointer dereference.

      See here for the patch to fix cat_cancel_cb: 4676

            bzzz Alex Zhuravlev
            prakash Prakash Surya (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: